syntax = "proto3";

package device.v1;

service DeviceService{
  rpc ListDeviceProcesses (ListDeviceProcessesRequest) returns (ListDeviceProcessesResponse){}
  rpc StreamDeviceProcesses (StreamDeviceProcessesRequest) returns (stream StreamDeviceProcessesResponse){}
  rpc ListDevices(ListDevicesRequest) returns (ListDevicesResponse){}
  rpc KillGpuProcess(KillGpuProcessRequest) returns (KillGpuProcessResponse){}
  rpc PatchConfigs(PatchConfigsRequest) returns (PatchConfigsResponse){}

  rpc PingServer(PingServerRequest) returns (PingServerResponse){}

}

message DeviceProcess{
  uint32 pid = 2;
  string uuid = 1;
  uint64 memory = 3;
  string cmdline = 4;
  string user = 5;
  string container_id = 6;
  string pod_name = 7;
  string pod_namespace = 8;
  int64 metagpu_requests = 9;
}
message Device{
  string uuid = 1;
  uint32 index = 2;
  uint32 shares = 3;
  uint32 gpu_utilization = 4;
  uint32 memory_utilization = 5;
  uint64 memory_total = 6;
  uint64 memory_free = 7;
  uint64 memory_used = 8;
}
message StreamDeviceProcessesRequest{
  string pod_id = 1;
}
message StreamDeviceProcessesResponse{
  string visibility_level = 1;
  repeated DeviceProcess devices_processes = 2;
}

message ListDeviceProcessesRequest{
  string pod_id = 1;
}
message ListDeviceProcessesResponse{
  string visibility_level = 1;
  repeated DeviceProcess devices_processes = 2;
}

message KillGpuProcessRequest{
  uint32 pid = 1;
}
message KillGpuProcessResponse{}

message PatchConfigsRequest{
  int32 meta_gpus = 1;
}
message PatchConfigsResponse{}

message ListDevicesRequest{}
message ListDevicesResponse{
  repeated Device device = 1;
}

message PingServerRequest{}
message PingServerResponse{}
